# epocha

./: .env  README.md  alembic.ini  l.json  localData.json  main.py  pyproject.toml  requirements.txt  test.py
api/: auth.py  routers.py  schemas.py  utils.py
config/: config.py
database/: __init__.py  models.py  session.py
database/migrations/: env.py
database/migrations/versions/: 9703d8ea38ec_.py  b3b44cc8a37c_.py  fdebf3ada32d_.py
web/static/: asset-manifest.json
web/static/css/: main.26fb70ee.css  main.26fb70ee.css.map  main.615ca833.css  main.615ca833.css.map  main.e8263b99.css  main.e8263b99.css.map
web/static/js/: 453.4ed14720.chunk.js  453.4ed14720.chunk.js.map  main.bc005ab4.js  main.bc005ab4.js.map  main.d7820705.js  main.d7820705.js.LICENSE.txt  main.e81859d4.js  main.e81859d4.js.LICENSE.txt  main.e81859d4.js.map
web/templates/: admin.html  index.html
